--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -72,6 +72,10 @@
   * {
     @apply border-border;
   }
+
+  body {
+    @apply bg-gray-50
+  }
   .btn {
     @apply bg-[#12b488] text-white px-3 py-2 rounded-md text-sm
 }
